# thesaurus

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.ini
.github/workflows/: rust.yml
crates/thesaurus/: Cargo.toml
crates/thesaurus-integration-suite/: Cargo.toml
crates/thesaurus-integration-suite/tests/: handler.rs
crates/thesaurus/src/: aof.rs  command.rs  config.rs  errors.rs  executor.rs  handler.rs  lib.rs  main.rs  resp2.rs  store.rs  ttl.rs
crates/thesaurus/src/command/: list.rs  mod.rs  set.rs  string.rs
crates/thesaurus/src/executor/: list.rs  mod.rs  set.rs  string.rs
crates/thesaurus/src/store/: list.rs  mod.rs  set.rs  string.rs
docs/: commands.md
docs/dev/: README.md  command_coverage.md
src/: aof.rs  command.rs  config.rs  errors.rs  executor.rs  handler.rs  main.rs  resp2.rs  store.rs  ttl.rs
src/responses/: del.rs  exists.rs  expire.rs  get.rs  mod.rs  persist.rs  ping.rs  set.rs  ttl.rs  unknown.rs
