[package]
name = "thesaurus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time", "signal"] }
uuid = { version = "1.23.1", features = ["v4"] }
