[workspace]
resolver = "2"
members = [
    "crates/thesaurus",
    "crates/thesaurus-integration-suite",
]

[workspace.package]
readme = "README.md"
authors = ["Konstantinos Vasilopoulos <costasvas34@gmail.com>"]
edition = "2024"
homepage = "https://github.com/kvasi34/thesaurus"
keywords = ["redis", "key-value", "database", "in-memory", "async"]
license = "GPL-3.0-only"
repository = "https://github.com/kvasi34/thesaurus"
rust-version = "1.95"
categories = ["database"]
